--- a/lesson7/task5/index.html
+++ b/lesson7/task5/index.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
 
-    <div class="three">
+    <div>
         <h2>I am another awesome h2</h2>
 
         <p>Tom Sawyer's best friends include Joe Harper and <em>Huckleberry</em> Finn. In The Adventures of Tom Sawyer, Tom's infatuation with classmate Becky Thatcher is apparent as he tries to intrigue her with his strength, boldness, and handsome looks.
