--- a/lesson8/task1/index.html
+++ b/lesson8/task1/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="content common">
-        'Content Box Sizing'
+        Content Box Sizing
     </div>
     <div class="border common">
-        'Border Box Sizing'
+        Border Box Sizing
     </div>
 </body>
 
