--- a/lesson10/task4/index.html
+++ b/lesson10/task4/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div class="conteyner">
-        <div class="block_block_red"></div>
-        <div class="block_block_green"></div>
-        <div class="block_block_blue"></div>
-        <div class="block_block_yellow"></div>
-        <div class="block_block_black"></div>
+        <div class="block_red"></div>
+        <div class="block_green"></div>
+        <div class="block_blue"></div>
+        <div class="block_yellow"></div>
+        <div class="block_black"></div>
     </div>
 </body>
 
