--- a/lesson11/task1/index.html
+++ b/lesson11/task1/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <div class="container">
-        <div>Not Displayed</div>
-        <div>Hiddnen</div>
-        <div>Visible</div>
+        <div class="display">Not Displayed</div>
+        <div class="hidden">Hiddnen</div>
+        <div class="visible">Visible</div>
     </div>
 </body>
 
