--- a/lesson12/task1/index.html
+++ b/lesson12/task1/index.html
@@ -13,7 +13,7 @@
     <section>
         <h1>Web technologies</h1>
         <p><span class="bold">HTML</span> (от англ. <span class="english">HyperText Markup Language</span> — «язык гипертекстовой разметки») — стандартизированный язык разметки документов во Всемирной паутине. Большинство веб-страниц содержат описание разметки
-            на языке HTML (или XHTML). Язык <span class="blue">HTML</span> интерпретируется браузерами; полученный в результате интерпретации форматированный текст отображается на экране монитора компьютера или мобильного устройства.
+            на языке HTML (или XHTML). Язык <a class="blue">HTML</a> интерпретируется браузерами; полученный в результате интерпретации форматированный текст отображается на экране монитора компьютера или мобильного устройства.
         </p>
         <p><span class="bold">CSS</span> (/siːɛsɛs/ англ. <span class="english">Cascading Style Sheets</span> — каскадные таблицы стилей) — формальный язык описания внешнего вида документа, написанного с использованием языка разметки.</p>
     </section>
