--- a/lesson15/task2/index.html
+++ b/lesson15/task2/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <video controls poster="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/poster.jpg">
-        <source src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4">
+    <video style="width: 500px; height: auto;" controls poster="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/poster.jpg">
+        <source src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4" type="video/mp4">
     </video>
 </body>
 
