--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -22,7 +22,7 @@
             <label for="checkbox">Accept terms and conditions</label>
         </div>
         <div class="choose-gender">
-            <input type="radio" name="gender" id="Male">
+            <input type="radio" name="gender" id="Male" checked>
             <label for="Male">Male</label>
             <input type="radio" name="gender" id="Female">
             <label for="Female">Female</label>
