--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="choose-gender">
             <input type="radio" name="gender" id="Male" checked>
-            <label for="Male">Male</label>
+            <label for="Male" class="male">Male</label>
             <input type="radio" name="gender" id="Female">
             <label for="Female">Female</label>
             <input type="radio" name="gender" id="Secret">
