--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -22,7 +22,7 @@
             <label for="checkbox">Accept terms and conditions</label>
         </div>
         <div class="choose-gender">
-            <input type="radio" name="gender" id="Male" checked>Male
+            <input type="radio" name="gender" id="Male">Male
             <input type="radio" name="gender" id="Female">Female
             <input type="radio" name="gender" id="Secret">Secret
         </div>
