--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -22,12 +22,9 @@
             <label for="checkbox">Accept terms and conditions</label>
         </div>
         <div class="choose-gender">
-            <input type="radio" name="gender" id="Male" checked>
-            <label for="Male" class="male">Male</label>
-            <input type="radio" name="gender" id="Female">
-            <label for="Female" class="female">Female</label>
-            <input type="radio" name="gender" id="Secret">
-            <label for="Secret" class="secret">Secret</label>
+            <input type="radio" name="gender" id="Male" checked>Male
+            <input type="radio" name="gender" id="Female"> Female
+            <input type="radio" name="gender" id="Secret"> Secret
         </div>
         <div>
             <textarea name="description" id="" placeholder="Write description..."></textarea>
