--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -18,8 +18,7 @@
             <input name="age" type="number" value="17">
         </div>
         <div>
-            <input id="checkbox" type="checkbox" name="agree">
-            <label for="checkbox">Accept terms and conditions</label>
+            <input id="checkbox" type="checkbox" name="agree"> Accept terms and conditions
         </div>
         <div class="choose-gender">
             <input type="radio" name="gender" id="Male" checked>Male
