--- a/lesson16/task2/index.html
+++ b/lesson16/task2/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <form>
-        <div>
+        <div class="last">
             <label for="lastName">LastName</label>
             <input id="lastName" name="lastName" type="text" value="Emerson" readonly>
         </div>
@@ -24,12 +24,9 @@
             <label for="checkbox">Accept terms and conditions</label>
         </div>
         <div class="choose-gender">
-            <input type="radio" name="gender" id="Male">
-            <label for="Male">Male</label>
-            <input type="radio" name="gender" id="Female">
-            <label for="Female">Female</label>
-            <input type="radio" name="gender" id="Secret" checked>
-            <label for="Secret">Secret</label>
+            <input type="radio" name="gender" id="Male">Male
+            <input type="radio" name="gender" id="Female">Female
+            <input type="radio" name="gender" id="Secret" checked>Secret
         </div>
         <div>
             <textarea name="description" id="" placeholder="Write description..." maxlength="10"></textarea>
