--- a/lesson16/task3/index.html
+++ b/lesson16/task3/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-    <div>
-        <label class="checkbox">Checkbox
-            <input type="checkbox">
-            <span class="checkmark"></span>
-        </label>
-    </div>
-
+    <label class="checkbox">
+        Checkbox
+        <input type="checkbox" id="custom_checkbox">
+        <span class="checkmark" for='custom_checkbox'></span>
+    </label>
 </body>
 
 </html>
