--- a/lesson16/task3/index.html
+++ b/lesson16/task3/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <label class="checkbox">
-        Checkbox
-        <input type="checkbox" id="custom_checkbox">
+        
+        <input type="checkbox" id="custom_checkbox"> Checkbox
         <span class="checkmark" for='custom_checkbox'></span>
     </label>
 </body>
