--- a/lesson16/task2/index.html
+++ b/lesson16/task2/index.html
@@ -23,10 +23,10 @@
             <input id="checkbox" type="checkbox" name="agree" disabled>
             <label for="checkbox">Accept terms and conditions</label>
         </div>
-        <div class="choose-gender">
-            <input type="radio" name="gender" id="Male">Male
-            <input type="radio" name="gender" id="Female">Female
-            <input type="radio" name="gender" id="Secret" checked>Secret
+        <div class="form-control">
+            <input type="radio" name="gender" id="gender-male" value="male" checked><label for="gender-male">Male</label>
+            <input type="radio" name="gender" id="gender-female" value="female"><label for="gender-female">Female</label>
+            <input type="radio" name="gender" id="gender-secret" value="other"><label for="gender-secret">Secret</label>
         </div>
         <div>
             <textarea name="description" id="" placeholder="Write description..." maxlength="10"></textarea>
