--- a/lesson16/task5/index.html
+++ b/lesson16/task5/index.html
@@ -13,7 +13,7 @@
     <form class="main-form">
         <div><input name="primaryLanguage" type="text" value="HTML" disabled></div>
         <div><input type="checkbox" name="agree" disabled></div>
-        <div><input type="checkbox" name="like" readonly></div>
+        <div><input type="checkbox" name="like" readonly checked></div>
         <div><input type="color" name="favoriteColor" value="#ff7f50"></div>
         <div><input type="date" name="birthDate" value="2021-01-02"></div>
         <div><input type="email" name="email" placeholder="example@domain.com" required></div>
