--- a/lesson16/task5/index.html
+++ b/lesson16/task5/index.html
@@ -14,17 +14,18 @@
         <div><input name="primaryLanguage" type="text" value="HTML" disabled></div>
         <div><input type="checkbox" name="agree" disabled></div>
         <div><input type="checkbox" name="like" readonly checked></div>
-        <div><input type="color" name="favoriteColor" value="#ff7f50"></div>
+        <div><input type="color" name="favouriteColor" value="#ff7f50"></div>
         <div><input type="date" name="birthDate" value="2021-01-02"></div>
+        <div><input type="datatime-local" name="birthTime" value="10-04-2024 13:02"></div>
         <div><input type="email" name="email" placeholder="example@domain.com" required></div>
         <div><input type="file" name="avatar"></div>
         <div><input type="month" name="startLearning" value="2020-01"></div>
         <div><input type="number" name="favouriteNumber" value="17"></div>
         <div><input type="textarea" name="story" rows="5" maxlength="30" placeholder="A long time ago..."></div>
-        <div><input type="password" name="secret"></div>
-        <div class="language">
+        <div><input type="password" name="password" value="secret"></div>
+        <div class="languages">
             <input type="radio" name="language" value="html"> HTML
-            <input type="radio" name="language" value="css"> CSS
+            <input type="radio" name="language" value="css" checked> CSS
             <input type="radio" name="language" value="javascript"> Javascript
         </div>
         <div>
@@ -33,7 +34,7 @@
         <div>
             <select name="framework">
                 <option value="react">React</option>
-                <option value="jquery" selected>Jquery</option>
+                <option value="jquery" selected>JQuery</option>
                 <option value="bootstrap">Bootstrap</option>
             </select>
         </div>
