--- a/lesson16/task5/index.html
+++ b/lesson16/task5/index.html
@@ -12,11 +12,11 @@
 <body>
     <form class="main-form">
         <div><input name="primaryLanguage" type="text" value="HTML" disabled></div>
-        <div><input type="checkbox" name="agree" disabled></div>
+        <div><input type="checkbox" name="agree"></div>
         <div><input type="checkbox" name="like" readonly checked></div>
         <div><input type="color" name="favouriteColor" value="#ff7f50"></div>
         <div><input type="date" name="birthDate" value="2021-01-02"></div>
-        <div><input type="datatime-local" name="birthTime" value="10-04-2024 13:02"></div>
+        <div><input type="datatime-local" name="birthTime" value="10/04/2024, 01:02"></div>
         <div><input type="email" name="email" placeholder="example@domain.com" required></div>
         <div><input type="file" name="avatar"></div>
         <div><input type="month" name="startLearning" value="2020-01"></div>
