--- a/lesson16/task5/index.html
+++ b/lesson16/task5/index.html
@@ -21,7 +21,7 @@
         <div><input type="file" name="avatar"></div>
         <div><input type="month" name="startLearning" value="2020-01"></div>
         <div><input type="number" name="favouriteNumber" value="17"></div>
-        <div><input type="textarea" name="story" rows="5" maxlength="30" placeholder="A long time ago..."></div>
+        <div><textarea name="story" rows="5" cols="30" maxlength="30" placeholder="A long time ago..."></textarea></div>
         <div><input type="password" name="password" value="secret"></div>
         <div class="languages">
             <input type="radio" name="language" value="html"> HTML
