--- a/lesson17/task1/index.html
+++ b/lesson17/task1/index.html
@@ -38,8 +38,8 @@
                 <td>$50</td>
             </tr>
             <tfoot>
-                <th colspan="3">Total</th>
-                <th>$60</th>
+                <td colspan="3">Total</td>
+                <td>$60</td>
             </tfoot>
         </tbody>
     </table>
