--- a/lesson18/task2/index.html
+++ b/lesson18/task2/index.html
@@ -19,7 +19,7 @@
         Catch the bird</button>
     <button class="show_button">
         <i class="fas fa-id-card"></i>
-        Creat account</button>
+        Create account</button>
 </body>
 
 </html>
