--- a/lesson21/task3/index.html
+++ b/lesson21/task3/index.html
@@ -30,7 +30,7 @@
                 <li><span class="css-units">rem</span> based on <code>&lt;html&gt;</code> font-size</li>
                 <li><span class="css-units">%</span> based on parent font size</li>
                 <li><span class="css-units">vh</span> (viewport height) based on screen height</li>
-                <li><span class="css-units">vw</span>(viewport width) based on<br> screen width</li>
+                <li><span class="css-units">vw</span>(viewport width) based on screen width</li>
             </ul>
         </section>
         <aside class="news">
