--- a/lesson21/task4/index.html
+++ b/lesson21/task4/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <p>Размер шрифта по умолчанию в Google Chrome равен <b>16px</b></p>
-    <p>W3C рекомендует: используем <b>em</b> для установки размера шрифта. Этот параграф имеет размер шрифта
-        <b>18px</b>, который унаследовал от <code>&lt;html&gt;</code></p>
+    <p>W3C рекомендует:<br> используем <b>em</b> для установки размера шрифта.<br> Этот параграф имеет размер шрифта
+        <b>18px</b>, который<br> унаследовал от <code>&lt;html&gt;</code></p>
     <p class="font-in-px">
         Размер шрифта <span class="font-in-px">равен 27px</span>
     </p>
