--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -8,22 +8,26 @@
     <title>Document</title>
 </head>
 <style>
-    body {
+    div {
         display: flex;
     }
     
     picture {
         max-width: 100%;
+        max-height: 100%;
         margin: auto;
     }
 </style>
 
 <body>
-    <picture>
-        <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg" alt="small">
-        <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="big" media="(min-width:400px)">
-        <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="">
-    </picture>
+    <div>
+        <picture>
+            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg" alt="small" media="(max-width:400px)">
+            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="big">
+            <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="img">
+        </picture>
+    </div>
+
 </body>
 
 </html>
