--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -13,9 +13,9 @@
     }
     
     picture {
-        max-width: 100%;
-        max-height: 100%;
         margin: auto;
+        max-width: 100%;
+        line-height: 0;
     }
 </style>
 
