--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -10,12 +10,11 @@
 <style>
     div {
         display: flex;
+        justify-content: center;
     }
     
     picture {
-        margin: auto;
         max-width: 100%;
-        line-height: 0;
     }
 </style>
 
