--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -16,6 +16,8 @@
     picture {
         max-width: 100%;
         max-height: 100%;
+        background-position: center;
+        background-size: auto;
     }
 </style>
 
