--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -15,9 +15,7 @@
     
     picture {
         max-width: 100%;
-        max-height: 100%;
-        background-position: center;
-        background-size: auto;
+        height: auto;
     }
 </style>
 
@@ -29,7 +27,6 @@
             <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="img">
         </picture>
     </div>
-
 </body>
 
 </html>
