--- a/lesson22/task4/index.html
+++ b/lesson22/task4/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <i class="fas fa-bars"></i>
+        <button><i class="fas fa-bars"></i></button>
     </header>
     <main class="main">
         <nav class="navigation">
